[gd_scene load_steps=8 format=3 uid="uid://bu0p362yp4ive"]

[ext_resource type="Script" uid="uid://dc681uq3tcuiu" path="res://Scenes/Item/item.gd" id="1_i10cy"]
[ext_resource type="Resource" uid="uid://csbl0xjlpdu53" path="res://Data/Items/knife.tres" id="2_ab5lp"]
[ext_resource type="Material" uid="uid://bb8m5fhpi4wqn" path="res://Assets/shaders/2d_outline_shader.tres" id="2_jsxdw"]
[ext_resource type="Texture2D" uid="uid://bq3pgyyo7wana" path="res://Assets/items.png" id="3_ab5lp"]
[ext_resource type="Script" uid="uid://dsyg84iqicbhl" path="res://Components/drag_and_drop.gd" id="4_r4u4p"]
[ext_resource type="Script" uid="uid://dye12q485wwdu" path="res://Components/outline_highlighter.gd" id="5_kutj8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0px54"]
size = Vector2(36, 36)

[node name="Item" type="Area2D"]
script = ExtResource("1_i10cy")
stats = ExtResource("2_ab5lp")

[node name="Visuals" type="CanvasGroup" parent="."]
material = ExtResource("2_jsxdw")

[node name="Background" type="Polygon2D" parent="Visuals"]
position = Vector2(0, -8)
color = Color(0.329412, 0.145098, 1, 1)
polygon = PackedVector2Array(1, 1, 31, 1, 31, 31, 1, 31)

[node name="Background2" type="Polygon2D" parent="Visuals"]
visible = false
position = Vector2(0, -8)
color = Color(0, 0.0823529, 0.12549, 1)
polygon = PackedVector2Array(3, 3, 29, 3, 29, 29, 3, 29)

[node name="Skin" type="Sprite2D" parent="Visuals"]
position = Vector2(16, 8)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_ab5lp")
region_enabled = true
region_rect = Rect2(160, 0, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_0px54")

[node name="DragAndDrop" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_r4u4p")
target = NodePath("..")
pickup_offset = 5.0

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("5_kutj8")
visuals = NodePath("../Visuals")
outline_color = Color(0.980392, 0.980392, 0.509804, 1)
outline_thickness = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
